--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/miama');
 *{
     margin: 0;
     padding: 0;
@@ -98,6 +99,10 @@ header{
     font-size: 4.8rem;
     color: var(--primary-color);
     font-weight: 900;
+}
+.miama-font{
+    font-family: 'Miama', sans-serif;
+    font-weight: 400;
 }
 .banner-content p{
     font-size: 1rem;
