--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,9 @@
 }
 
 /* Shared Styles */
-
+.hide{
+    display: none;
+}
 body{
     font-family: "Inter", sans-serif;
     background-color: var(--background-primary);
@@ -27,7 +29,6 @@ body{
     border-radius: 42px;
     border: none;
     padding: 16px 40px;
-    width: 224px;
 
 }
 .primary-heading{
@@ -87,6 +88,21 @@ header{
     display: none;
 }
 
+/* Nav responsive smaller device */
+
+@media screen and (max-width: 576px) {
+    header{
+        padding: 0 20px;
+    }
+    .nav-items{
+        display: none;
+    }
+    .fa-solid{
+        display: block;
+    }
+
+}
+
 /* Banner Styles */
 
 .banner{
@@ -125,8 +141,6 @@ header{
     position: absolute;
     top: 125px;
     left: 230px;
-}
-.total-video{
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 12px;
     width: 193px;
@@ -173,6 +187,24 @@ header{
     bottom: 63px;
 }
 
+/* Banner responsive smaller device */
+
+@media screen and (max-width: 576px) {
+    .banner{
+        flex-direction: column;
+        align-items: center;
+    }
+    .total-tutorial{
+        width: 155px;
+        right: 185px;
+        bottom: 151px;
+    }
+    .total-video{
+        width: 145px;
+        top: 47px;
+        left: 194px;
+    }
+}
 /* Habit section styles */
 
 .habits{
@@ -203,6 +235,16 @@ header{
     align-items: center;
 }
 
+/* Habit section responsive */
+
+@media screen and (max-width: 576px) {
+    .habits{
+        margin: 0 20px;
+    }
+    .all-habits{
+        flex-direction: column;
+    }
+}
 /* Run section styles */
 
 .run{
@@ -229,8 +271,21 @@ header{
 }
 .run-content{
     margin-left: 22px;
+    text-align: justify;
 }
 
+/* Run section responsive */
+
+@media screen and (max-width: 576px) {
+    .run{
+        flex-direction: column;
+        margin: 66px 20px;
+        gap: 31px;
+    }
+    .run img{
+        width: 100%;
+    }
+}
 /* BMI calculator section styles */
 
 .bmi-calc-heading{
@@ -301,6 +356,29 @@ table{
 }
 #bmi-submit{
     margin-top: 34px;
+    width: 224px;
+}
+
+/* Bmi calculator responsive styles */
+
+@media screen and (max-width: 576px) {
+    .calc-info{
+        flex-direction: column;
+        gap: 42px;
+        margin: 0 20px;
+    }
+    .bmi-chart{
+        width: 100%;
+    }
+    .bmi-form-container{
+        width: 100%;
+    }
+    .input-field{
+        width: 170px;
+    }
+    .full-width-field{
+        width: 100%;
+    }
 }
 /* Our team styles */
 
